# object_detector

./: README.md
docker/container-armv8-base/: Dockerfile
docker/container-armv8-base/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-armv8-dev/: Dockerfile
docker/container-armv8-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-jetson5-ai/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-jetson5/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-base/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-cudev-ai/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/config/: object_detector.yaml  object_detector_py.yaml
src/object_detector/launch/: object_detector.launch.py  object_detector_py.launch.py
src/object_detector/object_detector/: object_detector_py_app.py  object_detector_py_node.py
src/object_detector/src/: object_detector_app.cpp
src/object_detector_cpp/: CMakeLists.txt  package.xml
src/object_detector_py/: .gitignore  package.xml  setup.cfg  setup.py
src/object_detector_py/config/: object_detector.yaml
src/object_detector_py/launch/: object_detector.launch.py
src/object_detector_py/object_detector_py/: object_detector_app.py  object_detector_node.py
(+21 files in other folders)
