<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detector_py</name>
  <version>1.0.0</version>
  <description>Object Detector module.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation</maintainer>
  <license>Apache-2.0</license>

  <depend>dua_interfaces</depend>
  <depend>dua_qos_py</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
